--- a/DataObjects/DataObjects.csproj
+++ b/DataObjects/DataObjects.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AppData.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reading.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\DataSources\AppData.datasource" />
