--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -42,11 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CardManager.cs" />
-    <Compile Include="Deck.cs" />
+    <Compile Include="DeckManager.cs" />
     <Compile Include="Helpers.cs" />
-    <Compile Include="Journal.cs" />
+    <Compile Include="JournalManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Spread.cs" />
+    <Compile Include="SpreadManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
